--- a/esp32/sigfox/README
+++ b/esp32/sigfox/README
@@ -1,16 +1,15 @@
 This directory contains the sigfox support.
 
-There are three prebuilt libraries for SIPY, LOPY4, and FIPY.
+There are three prebuilt libraries for LOPY4 and FIPY.
 
 @Pycom In order to build these libraries execute the following steps using the private pyupython repository:
 
-git clone -b sigfox git@github.com:pycom/pyupython.git src
+git clone -b sigfox_idf_4 git@github.com:pycom/pyupython.git src
 cd src
-git checkout 9a5e7a9b
+git checkout 05d49f8f
 cd ../..
 make BOARD=LOPY4 TARGET=sigfox
 make BOARD=FIPY TARGET=sigfox
-make BOARD=SIPY TARGET=sigfox
 ./get_sigfox_libs.py
 
 Now you see the updated .a files with
